# traning

./: .gitignore  pyproject.toml  setup.cfg
estete/estate/: .env.example  manage.py
estete/estate/apps/common/: models.py
estete/estate/apps/profiles/: signals.py
estete/estate/apps/profiles/migrations/: 0001_initial.py  0002_alter_profile_city_alter_profile_country_and_more.py
estete/estate/apps/ratings/: apps.py  models.py
estete/estate/apps/ratings/migrations/: 0001_initial.py
estete/estate/apps/users/: managers.py
estete/estate/apps/users/migrations/: 0001_initial.py  0002_alter_user_date_joined.py  0003_alter_user_date_joined.py  0004_alter_user_date_joined.py  0005_alter_user_date_joined.py  0006_rename_is_stuff_user_is_staff_alter_user_email.py
estete/estate/estate/: urls.py  wsgi.py
estete/estate/estate/settings/: base.py  development.py
tests/: test_estete.py
