[tool.poetry]
name = "estete"
version = "0.1.0"
description = ""
authors = ["olegatorh <herston4ik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
django-filter = "^21.1"
django-autoslug = "^1.9.8"
django-countries = "^7.3.2"
Pillow = "^9.1.1"
django-phonenumber-field = "^6.1.0"
phonenumbers = "^8.12.49"
psycopg2-binary = "^2.9.3"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
djoser = "^2.1.0"
djangorestframework-simplejwt = "4.8.0"
PyJWT = "^2.4.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
